--- a/project0/project0.ipynb
+++ b/project0/project0.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,9 +53,9 @@
      "text": [
       "Coefficients: \n",
       " [0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1 0.1]\n",
-      "Mean Absolute Error: 4.827975658150407e-13\n",
-      "Mean Squared Error: 3.637044361440632e-25\n",
-      "Mean Root Squared Error: 6.030791292559071e-13\n",
+      "Mean Absolute Error: 5.769437844138636e-13\n",
+      "Mean Squared Error: 5.186057511376279e-25\n",
+      "Mean Root Squared Error: 7.201428685598628e-13\n",
       "Coefficient of determination: 1.00\n"
      ]
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,9 +110,9 @@
    ]
   },
   "kernelspec": {
-   "display_name": "introml",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "introml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -124,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
