--- a/project1a/project1a.ipynb
+++ b/project1a/project1a.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### General guidance\n",
-    "\n",
-    "This serves as a template which will guide you through the implementation of this task. It is advised\n",
-    "to first read the whole template and get a sense of the overall structure of the code before trying to fill in any of the TODO gaps.\n",
-    "This is the jupyter notebook version of the template. For the python file version, please refer to the file `template_solution.py`.\n",
-    "\n",
-    "First, we import necessary libraries:"
+    "# Project 1a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importing libraries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +24,8 @@
     "import numpy as np\n",
     "from sklearn.model_selection import KFold\n",
     "\n",
-    "# Add any additional imports here (however, the task is solvable without using \n",
-    "# any additional imports)\n",
-    "# import ..."
+    "# Add any additional imports here (however, the task is solvable without using any additional imports)\n",
+    "from sklearn import linear_model"
    ]
   },
   {
@@ -37,14 +37,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         x1   x2     x3   x4     x5     x6     x7      x8    x9    x10   x11  \\\n",
+      "0   0.06724  0.0   3.24  0.0  0.460  6.333   17.2  5.2146   4.0  430.0  16.9   \n",
+      "1   9.23230  0.0  18.10  0.0  0.631  6.216  100.0  1.1691  24.0  666.0  20.2   \n",
+      "2   0.11425  0.0  13.89  1.0  0.550  6.373   92.4  3.3633   5.0  276.0  16.4   \n",
+      "3  24.80170  0.0  18.10  0.0  0.693  5.349   96.0  1.7028  24.0  666.0  20.2   \n",
+      "4   0.05646  0.0  12.83  0.0  0.437  6.232   53.7  5.0141   5.0  398.0  18.7   \n",
+      "\n",
+      "      x12    x13  \n",
+      "0  375.21   7.34  \n",
+      "1  366.15   9.53  \n",
+      "2  393.74  10.50  \n",
+      "3  396.90  19.77  \n",
+      "4  386.40  12.34  \n"
+     ]
+    }
+   ],
    "source": [
     "data = pd.read_csv(\"train.csv\")\n",
     "y = data[\"y\"].to_numpy()\n",
     "data = data.drop(columns=\"y\")\n",
-    "# print a few data samples\n",
+    "# Print a few data samples\n",
     "print(data.head())"
    ]
   },
@@ -57,12 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_RMSE(w, X, y):\n",
-    "    \"\"\"This function takes test data points (X and y), and computes the empirical RMSE of \n",
+    "    \"\"\"\n",
+    "    This function takes test data points (X and y), and computes the empirical RMSE of \n",
     "    predicting y from X using a linear model with weights w. \n",
     "\n",
     "    Parameters\n",
@@ -76,7 +97,12 @@
     "    RMSE: float: dim = 1, RMSE value\n",
     "    \"\"\"\n",
     "    RMSE = 0\n",
+    "\n",
     "    # TODO: Enter your code here\n",
+    "    n = len(y)\n",
+    "    RMSE = np.sqrt((1/n) * (np.linalg.norm(y - (X@w))**2))\n",
+    "    #####\n",
+    "\n",
     "    assert np.isscalar(RMSE)\n",
     "    return RMSE"
    ]
@@ -90,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +137,13 @@
     "    w: array of floats: dim = (13,), optimal parameters of ridge regression\n",
     "    \"\"\"\n",
     "    w = np.zeros((13,))\n",
+    "\n",
     "    # TODO: Enter your code here\n",
+    "    reg = linear_model.Ridge(alpha=lam, fit_intercept=False, random_state=42)\n",
+    "    reg.fit(X, y)\n",
+    "    w = reg.coef_\n",
+    "    #####\n",
+    "\n",
     "    assert w.shape == (13,)\n",
     "    return w"
    ]
@@ -125,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +186,17 @@
     "\n",
     "# TODO: Enter your code here. Hint: Use functions 'fit' and 'calculate_RMSE' with training and test data\n",
     "# and fill all entries in the matrix 'RMSE_mat'\n",
+    "kf = KFold(n_splits=n_folds)\n",
+    "j = 0\n",
+    "for lam in lambdas:\n",
+    "    i = 0\n",
+    "    for train, test in kf.split(X):\n",
+    "        X_train, X_test, y_train, y_test = X[train], X[test], y[train], y[test]\n",
+    "        w = fit(X_train, y_train, lam)\n",
+    "        RMSE_mat[i, j] = calculate_RMSE(w, X_test, y_test)\n",
+    "        i += 1\n",
+    "    j += 1\n",
+    "#####\n",
     "\n",
     "avg_RMSE = np.mean(RMSE_mat, axis=0) # avg_RMSE: array of floats: dim = (5,), average RMSE value for every lambda\n",
     "assert avg_RMSE.shape == (5,)"
@@ -161,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
