--- a/project1b/project1b.ipynb
+++ b/project1b/project1b.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project 1b\n",
-    "\n",
-    "This serves as a template which will guide you through the implementation of this task. It is advised\n",
-    "to first read the whole template and get a sense of the overall structure of the code before trying to fill in any of the TODO gaps.\n",
-    "This is the jupyter notebook version of the template. For the python file version, please refer to the file `template_solution.py`.\n",
-    "\n",
-    "First, we import necessary libraries:"
+    "# Project 1b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Importing libraries"
    ]
   },
   {
@@ -22,10 +23,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# Add any additional imports here (however, the task is solvable without using \n",
-    "# any additional imports)\n",
+    "# Add any additional imports here (however, the task is solvable without using any additional imports)\n",
     "from sklearn import linear_model, model_selection\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score, PredictionErrorDisplay"
+    "from sklearn.model_selection import KFold"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Transform data"
+    "#### Transforming data"
    ]
   },
   {
@@ -105,14 +105,130 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Fit data (TODO)"
+    "#### Performing model selection"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.9600833  1.95872163 1.95812307 1.9581467  1.95840483 1.95872958\n",
+      " 1.95916479 1.95968563]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lasso regularization, k-fold CV to choose lambda\n",
+    "lambdas = [0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08] # slow convergence for higher lambdas\n",
+    "n_folds = 5\n",
+    "RMSE_mat = np.zeros((n_folds, len(lambdas)))\n",
+    "kf = KFold(n_splits=n_folds)\n",
+    "j = 0\n",
+    "for lam in lambdas:\n",
+    "    i = 0\n",
+    "    for train, test in kf.split(X):\n",
+    "        x_train, x_test, y_train, y_test = X_transformed[train], X_transformed[test], y[train], y[test]\n",
+    "        reg = linear_model.Lasso(alpha=lam, fit_intercept=False, random_state=42)\n",
+    "        reg.fit(x_train, y_train)\n",
+    "        w = reg.coef_\n",
+    "        n = len(y_test)\n",
+    "        RMSE_mat[i, j] = np.sqrt((1/n) * (np.linalg.norm(y_test - (x_test@w))**2))\n",
+    "        i += 1\n",
+    "    j += 1\n",
+    "avg_RMSE = np.mean(RMSE_mat, axis=0)\n",
+    "print(avg_RMSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: \n",
+      " [ 0.         -0.         -0.          0.          0.         -0.\n",
+      "  0.          0.         -0.          0.         -0.10314805 -1.71780757\n",
+      " -2.41998714 -0.         -0.00797411 -0.72869001 -1.52968372 -0.\n",
+      " -0.         -0.01020332 -0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lasso regularization, lambda = 0.03 (lowest cross-validation error)\n",
+    "reg = linear_model.Lasso(alpha=0.03, fit_intercept=False, random_state=42)\n",
+    "reg.fit(X_transformed, y)\n",
+    "w = reg.coef_\n",
+    "print(\"Coefficients: \\n\", w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.96878705 1.96469275 1.96317828 1.96047518 1.9601682  1.96025772\n",
+      " 1.96083767 1.96292632]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ridge regularization, k-fold CV to choose lambda\n",
+    "lambdas = [0.1, 0.5, 1, 5, 10, 20, 50, 100]\n",
+    "n_folds = 5\n",
+    "RMSE_mat = np.zeros((n_folds, len(lambdas)))\n",
+    "kf = KFold(n_splits=n_folds)\n",
+    "j = 0\n",
+    "for lam in lambdas:\n",
+    "    i = 0\n",
+    "    for train, test in kf.split(X):\n",
+    "        x_train, x_test, y_train, y_test = X_transformed[train], X_transformed[test], y[train], y[test]\n",
+    "        reg = linear_model.Ridge(alpha=lam, fit_intercept=False, random_state=42)\n",
+    "        reg.fit(x_train, y_train)\n",
+    "        w = reg.coef_\n",
+    "        n = len(y_test)\n",
+    "        RMSE_mat[i, j] = np.sqrt((1/n) * (np.linalg.norm(y_test - (x_test@w))**2))\n",
+    "        i += 1\n",
+    "    j += 1\n",
+    "avg_RMSE = np.mean(RMSE_mat, axis=0)\n",
+    "print(avg_RMSE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fitting data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: \n",
+      " [ 0.13452424 -0.31706357 -0.46497623  0.22050574  0.08450269 -0.16125329\n",
+      "  0.08779552  0.08831434 -0.11734824  0.03443236 -0.51061588 -0.83693986\n",
+      " -0.98700956 -0.39820775 -0.46428312 -0.48169923 -0.60546589 -0.60568324\n",
+      " -0.50433045 -0.5782814  -0.56181812]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Use the transformed data points X_transformed and fit the linear regression on this \n",
@@ -130,7 +246,11 @@
     "w = np.zeros((21,))\n",
     "\n",
     "# TODO: Enter your code here\n",
-    "\n",
+    "# ridge regularization, lambda = 10 (lowest cross-validation error)\n",
+    "reg = linear_model.Ridge(alpha=10, fit_intercept=False, random_state=42)\n",
+    "reg.fit(X_transformed, y)\n",
+    "w = reg.coef_\n",
+    "print(\"Coefficients: \\n\", w)\n",
     "#####\n",
     "\n",
     "assert w.shape == (21,)"
@@ -138,141 +258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficients: \n",
-      " [ 0.83560546 -1.0922304  -0.9373202   0.39572759 -0.06052491 -1.65909449\n",
-      "  1.57817549 -0.82710702  0.38750165  3.36084902 -1.18100705 -0.66577088\n",
-      " -1.74241497 -0.18267602  0.90279138  0.46742226 -1.17418472  0.03076527\n",
-      " -0.62545767 -2.01133209 -0.38726443]\n",
-      "Root Mean Squared Error: 1.8246278497465436\n"
-     ]
-    }
-   ],
-   "source": [
-    "# square loss ; ridge, lambda = 0.1\n",
-    "x_train, x_valid, y_train, y_valid = model_selection.train_test_split(X_transformed, y, test_size = 0.2, random_state = 42)\n",
-    "reg = linear_model.Ridge(alpha=0.1, fit_intercept=False, random_state=42)\n",
-    "reg.fit(x_train, y_train)\n",
-    "pred_valid = reg.predict(x_valid)\n",
-    "w = reg.coef_\n",
-    "print(\"Coefficients: \\n\", w)\n",
-    "# evaluate model performance on validation data\n",
-    "print('Root Mean Squared Error:', np.sqrt(mean_squared_error(y_valid, pred_valid)))\n",
-    "\n",
-    "reg.fit(X_transformed, y)\n",
-    "w = reg.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficients: \n",
-      " [ 0.80711335 -1.08612605 -0.93600379  0.38388339 -0.05694639 -1.67246809\n",
-      "  1.57525671 -0.81807855  0.38186206  3.31414926 -1.15248637 -0.67200265\n",
-      " -1.74148948 -0.1713281   0.88279014  0.46378936 -1.17979813  0.01817814\n",
-      " -0.62569178 -1.99705229 -0.3947176 ]\n",
-      "Root Mean Squared Error: 1.8245924410535572\n"
-     ]
-    }
-   ],
-   "source": [
-    "# square loss ; ridge, lambda = 0.1; stochastic average gradient descent\n",
-    "reg = linear_model.Ridge(alpha=0.1, fit_intercept=False, solver='saga', random_state=42)\n",
-    "reg.fit(x_train, y_train)\n",
-    "pred_valid = reg.predict(x_valid)\n",
-    "w = reg.coef_\n",
-    "print(\"Coefficients: \\n\", w)\n",
-    "# evaluate model performance on validation data\n",
-    "print('Root Mean Squared Error:', np.sqrt(mean_squared_error(y_valid, pred_valid)))\n",
-    "\n",
-    "reg.fit(X_transformed, y)\n",
-    "w = reg.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficients: \n",
-      " [ 0.          0.          0.          0.          0.         -0.\n",
-      " -0.         -0.         -0.          0.         -0.07735548 -1.58858225\n",
-      " -1.51381443 -0.         -0.         -1.14980985 -1.49865648 -0.02969151\n",
-      " -0.         -0.58172346 -0.        ]\n",
-      "Root Mean Squared Error: 1.8232168615145992\n"
-     ]
-    }
-   ],
-   "source": [
-    "# square loss ; lasso, lambda = 0.1\n",
-    "reg = linear_model.Lasso(alpha=0.1, fit_intercept=False, random_state=42)\n",
-    "reg.fit(x_train, y_train)\n",
-    "pred_valid = reg.predict(x_valid)\n",
-    "w = reg.coef_\n",
-    "print(\"Coefficients: \\n\", w)\n",
-    "# evaluate model performance on validation data\n",
-    "print('Root Mean Squared Error:', np.sqrt(mean_squared_error(y_valid, pred_valid)))\n",
-    "\n",
-    "reg.fit(X_transformed, y)\n",
-    "w = reg.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coefficients: \n",
-      " [ 0.4491419  -0.87807598 -0.9203283   0.29633193  0.02416857 -1.07251858\n",
-      "  0.83517203 -0.27380556  0.18328835  1.24471363 -0.75487491 -0.93361942\n",
-      " -1.52698303 -0.17981854  0.05872438  0.06984616 -0.88500311 -0.33210305\n",
-      " -0.57155137 -1.07269721 -0.46984047]\n",
-      "Root Mean Squared Error: 1.8253920930665348\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Huber loss ; epsilon = 4, lambda = 0.2\n",
-    "reg = linear_model.HuberRegressor(epsilon=4, alpha=0.2, fit_intercept=False, max_iter=1000)\n",
-    "reg.fit(x_train, y_train)\n",
-    "pred_valid = reg.predict(x_valid)\n",
-    "w = reg.coef_\n",
-    "print(\"Coefficients: \\n\", w)\n",
-    "# evaluate model performance on validation data\n",
-    "print('Root Mean Squared Error:', np.sqrt(mean_squared_error(y_valid, pred_valid)))\n",
-    "\n",
-    "reg.fit(X_transformed, y)\n",
-    "w = reg.coef_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save results in the required format\n",
-    "# np.savetxt(\"./results-huberloss-eps4-ridge0.2.csv\", w, fmt=\"%.12f\")"
+    "np.savetxt(\"./results.csv\", w, fmt=\"%.12f\")"
    ]
   }
  ],
