--- a/project2/template_solution_Nicola.ipynb
+++ b/project2/template_solution_Nicola.ipynb
@@ -175,7 +175,7 @@
     "# Dummy initialization of the X_train, X_test and y_train   \n",
     "# TODO: Depending on how you deal with the non-numeric data, you may want to \n",
     "# Initialize OneHotEncoder\n",
-    "encoder = OneHotEncoder(sparse=False)\n",
+    "encoder = OneHotEncoder(sparse_output=False)\n",
     "\n",
     "# Fit and transform the data\n",
     "one_hot_encoded1 = encoder.fit_transform(train_df[['season']])\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 115,
    "id": "9fb0d86b605f9813",
    "metadata": {
     "collapsed": false
@@ -272,10 +272,6 @@
      "output_type": "stream",
      "text": [
       "/Users/nicolazolliker/anaconda3/envs/iml/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:419: ConvergenceWarning: The optimal value found for dimension 0 of parameter sigma_0 is close to the specified lower bound 1e-05. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/Users/nicolazolliker/anaconda3/envs/iml/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:419: ConvergenceWarning: The optimal value found for dimension 0 of parameter length_scale is close to the specified lower bound 1e-05. Decreasing the bound and calling fit again may find a better value.\n",
-      "  warnings.warn(\n",
-      "/Users/nicolazolliker/anaconda3/envs/iml/lib/python3.10/site-packages/sklearn/gaussian_process/kernels.py:419: ConvergenceWarning: The optimal value found for dimension 0 of parameter length_scale is close to the specified lower bound 1e-05. Decreasing the bound and calling fit again may find a better value.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -283,12 +279,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.87755586  0.97523028  0.93928585  0.97545642]\n",
-      " [ 0.90645666  0.93769499 -0.35363157  0.94884853]\n",
-      " [ 0.78883046  0.93081321 -0.81307264  0.92003786]\n",
-      " [ 0.89476601  0.97350736  0.91091743  0.97491152]\n",
-      " [ 0.89718432  0.96781547  0.91414043  0.97259058]]\n",
-      "[0.87295866 0.95701226 0.3195279  0.95836898]\n"
+      "[[0.87755586 0.97523028 0.93928585 0.97545642]\n",
+      " [0.90645666 0.93769499 0.85018023 0.94884852]\n",
+      " [0.78883046 0.93081321 0.8843229  0.92003786]\n",
+      " [0.89476601 0.97350736 0.91091743 0.97491152]\n",
+      " [0.89718432 0.96781547 0.91414042 0.97259058]]\n",
+      "[0.87295866 0.95701226 0.89976937 0.95836898]\n"
      ]
     }
    ],
@@ -321,7 +317,7 @@
     "    i=0\n",
     "    for train, test in kf.split(X_train):\n",
     "        x_cv, x_valid, y_cv, y_valid = X_train[train], X_train[test], y_train[train], y_train[test]\n",
-    "        gpr = GaussianProcessRegressor(kernel=ker, random_state=100)\n",
+    "        gpr = GaussianProcessRegressor(kernel=ker, n_restarts_optimizer = 3, random_state=42)\n",
     "        gpr.fit(x_cv, y_cv)\n",
     "        score[i, j] = gpr.score(x_valid, y_valid)\n",
     "        i+=1\n",
@@ -330,16 +326,13 @@
     "print(score)\n",
     "print(np.mean(score, axis=0))\n",
     "\n",
-    "x = gpr.predict(X_test, return_std=False)\n",
-    "y_pred = x\n",
-    "\n",
     "\n",
     "assert y_pred.shape == (100,), \"Invalid data shape\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 116,
    "id": "ab81c077",
    "metadata": {},
    "outputs": [
@@ -348,28 +341,28 @@
      "output_type": "stream",
      "text": [
       "1.0\n",
-      "[-1.98141431 -2.34638819 -2.16027943 -0.56083018 -1.85409905 -2.21389683\n",
-      " -1.43360329  0.40344926  0.01194177  1.12006564  0.8390515   2.75164235\n",
-      "  2.42790331  2.36704077  2.68664547  1.88051352  1.78646943  1.89615272\n",
-      "  2.0296672   1.68483961  2.94215121  3.21006158  3.42328871  3.0554868\n",
-      "  3.21032899  4.74058067  5.73818542  7.85939994  8.91027594  9.16855723\n",
-      "  9.01049924  7.8256356   7.83747002  7.4529233   7.79664999  7.72958615\n",
-      "  7.51630042  7.96117223  7.8652117   7.27419389  7.75828939  7.64420712\n",
-      "  7.84180254  7.77024952  7.79919723  8.09667712  7.70314666  8.13663762\n",
-      "  7.76291149  7.85225175  7.50884851  7.73309586  7.64679099  8.56907397\n",
-      "  7.92477373  9.01739373  8.4067652   8.11544504  6.93099617  6.36473016\n",
-      "  6.94012544  5.74783812  5.37925     5.47215215  5.20779912  5.25569111\n",
-      "  4.67550814  4.76457153  4.16667335  5.32994261  4.41704352  5.31858056\n",
-      "  3.82480585  5.65373378  5.73185359  6.30247506  7.52730379  7.52380859\n",
-      "  8.07635128  8.29110907  8.34287893  8.36368605  7.58837072  8.18525601\n",
-      "  8.74328737  8.63102068  8.74515097  8.01286975  7.82869466  7.3826889\n",
-      "  7.44038387  8.07976407  8.84023669  9.17974313  8.12421291  7.76690637\n",
-      "  8.43717923  7.93906168  6.73962154  6.39754713]\n"
+      "[-1.98141438 -2.3463881  -2.16027946 -0.56083042 -1.85409909 -2.21389668\n",
+      " -1.4336032   0.40344909  0.01194165  1.12006565  0.83905146  2.75164227\n",
+      "  2.42790329  2.36704096  2.68664557  1.88051356  1.78646949  1.89615268\n",
+      "  2.02966716  1.68483959  2.94215123  3.21006164  3.42328874  3.05548692\n",
+      "  3.21032907  4.7405807   5.73818546  7.85939997  8.91027591  9.16855706\n",
+      "  9.01049908  7.82563577  7.83746999  7.45292347  7.79665008  7.72958618\n",
+      "  7.51630049  7.96117217  7.86521161  7.27419403  7.75828945  7.6442071\n",
+      "  7.84180259  7.7702496   7.79919726  8.0966771   7.70314657  8.13663766\n",
+      "  7.7629115   7.85225181  7.50884881  7.73309607  7.64679106  8.56907402\n",
+      "  7.9247738   9.01739351  8.40676528  8.11544513  6.93099624  6.36473014\n",
+      "  6.94012534  5.7478381   5.37925013  5.47215219  5.20779917  5.2556912\n",
+      "  4.67550823  4.76457154  4.16667342  5.3299426   4.41704359  5.31858056\n",
+      "  3.82480592  5.65373381  5.73185369  6.30247515  7.52730375  7.52380868\n",
+      "  8.07635139  8.29110888  8.34287899  8.36368623  7.5883709   8.18525616\n",
+      "  8.74328724  8.63102064  8.74515089  8.01286985  7.82869479  7.38268909\n",
+      "  7.44038403  8.07976409  8.84023657  9.17974309  8.12421298  7.76690622\n",
+      "  8.43717931  7.93906151  6.7396216   6.39754724]\n"
      ]
     }
    ],
    "source": [
-    "gpr = GaussianProcessRegressor(kernel=RationalQuadratic(), random_state=100)\n",
+    "gpr = GaussianProcessRegressor(kernel=RationalQuadratic(), n_restarts_optimizer = 3, random_state=42)\n",
     "gpr.fit(X_train, y_train)\n",
     "y_pred = gpr.predict(X_test)\n",
     "print(gpr.score(X_train, y_train))\n",
