ALBERT works better, hard baseline cleared

--- a/project4/template_solution_Dipayan.ipynb
+++ b/project4/template_solution_Dipayan.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b1c6ff7632991155",
    "metadata": {
     "collapsed": false
@@ -37,12 +37,13 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import Dataset, DataLoader, TensorDataset\n",
-    "from transformers import GPT2Config, GPT2Tokenizer, GPT2Model"
+    "# from transformers import GPT2Config, GPT2Tokenizer, GPT2Model\n",
+    "from transformers import AlbertConfig, AlbertTokenizer, AlbertModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8d9b5e89d4b3a02",
    "metadata": {
     "collapsed": false
@@ -58,33 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c5fef543",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading configuration...\n",
-      "Loading tokenizer...\n",
-      "Loading model...\n",
-      "Model loaded to `mps`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Loading configuration...')\n",
-    "model_config = GPT2Config.from_pretrained(pretrained_model_name_or_path=\"gpt2\")\n",
+    "model_config = AlbertConfig.from_pretrained(pretrained_model_name_or_path=\"albert-base-v2\")\n",
     "print('Loading tokenizer...')\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained(pretrained_model_name_or_path=\"gpt2\")\n",
-    "# default to left padding\n",
-    "tokenizer.padding_side = \"left\"\n",
+    "tokenizer = AlbertTokenizer.from_pretrained(pretrained_model_name_or_path=\"albert-base-v2\")\n",
+    "# default to right padding\n",
+    "tokenizer.padding_side = \"right\"\n",
     "# Define PAD Token = EOS Token = 50256\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
     "# Get the actual model.\n",
     "print('Loading model...')\n",
-    "model = GPT2Model.from_pretrained(pretrained_model_name_or_path=\"gpt2\", config=model_config)\n",
+    "model = AlbertModel.from_pretrained(pretrained_model_name_or_path=\"albert-base-v2\", config=model_config)\n",
     "# resize model embedding to match new tokenizer\n",
     "# model.resize_token_embeddings(len(tokenizer))\n",
     "# fix model padding token id\n",
@@ -96,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "161fdafaedaa5b0",
    "metadata": {
     "collapsed": false
@@ -104,50 +94,36 @@
    "outputs": [],
    "source": [
     "# TODO: Fill out ReviewDataset\n",
-    "# class ReviewDataset(Dataset):\n",
-    "#     def __init__(self, data_frame):\n",
-    "#         self.text = data_frame[\"title\"].str.cat(data_frame[\"sentence\"], sep = \" \")\n",
-    "\n",
-    "#     def __len__(self):\n",
-    "#         return len(self.text)\n",
-    "\n",
-    "#     def __getitem__(self, index):\n",
-    "#         return {\"text\": self.text[index]}\n",
-    "\n",
     "class ReviewDataset(Dataset):\n",
     "    def __init__(self, data_frame):\n",
-    "        self.title = data_frame[\"title\"]\n",
-    "        self.sentence = data_frame[\"sentence\"]\n",
+    "        self.text = data_frame[\"title\"].str.cat(data_frame[\"sentence\"], sep = \" \")\n",
     "\n",
     "    def __len__(self):\n",
-    "        return len(self.title)\n",
+    "        return len(self.text)\n",
     "\n",
     "    def __getitem__(self, index):\n",
-    "        return {\"title\": self.title[index], \"sentence\": self.sentence[index]}"
+    "        return {\"text\": self.text[index]}\n",
+    "\n",
+    "# class ReviewDataset(Dataset):\n",
+    "#     def __init__(self, data_frame):\n",
+    "#         self.title = data_frame[\"title\"]\n",
+    "#         self.sentence = data_frame[\"sentence\"]\n",
+    "\n",
+    "#     def __len__(self):\n",
+    "#         return len(self.title)\n",
+    "\n",
+    "#     def __getitem__(self, index):\n",
+    "#         return {\"title\": self.title[index], \"sentence\": self.sentence[index]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "676f7a012f50e988",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dealing with Train...\n",
-      "Created `train_dataset` with 12500 samples\n",
-      "Created `train_loader` with 625 batches\n",
-      "\n",
-      "Dealing with Test...\n",
-      "Created `test_dataset` with 1000 samples\n",
-      "Created `test_loader` with 50 batches\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Dealing with Train...')\n",
     "# Create pytorch dataset.\n",
@@ -261,26 +237,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# embeddings_test = np.zeros((len(test_dataset), embedding_size))\n",
-    "# i = 0\n",
-    "# with torch.no_grad():\n",
-    "#     model.eval()\n",
-    "#     for batch in tqdm(test_loader, total=len(test_loader)):\n",
-    "#         data = list(batch.values())\n",
-    "#         encoded = tokenizer(*data, return_tensors='pt', padding=True, truncation=True)\n",
-    "#         del data\n",
-    "#         encoded.to(DEVICE)\n",
-    "#         outputs = model(**encoded)\n",
-    "#         word_embeddings = outputs.last_hidden_state * encoded.attention_mask.unsqueeze(-1).float()\n",
-    "#         del outputs\n",
-    "#         sentence_embeddings = word_embeddings.sum(dim=1)\n",
-    "#         del word_embeddings\n",
-    "#         sentence_embeddings /= encoded.attention_mask.sum(dim=1, keepdim=True).float()\n",
-    "#         del encoded\n",
-    "#         embeddings_test[BATCH_SIZE*i : BATCH_SIZE*(i+1)] = sentence_embeddings.cpu().numpy()\n",
-    "#         del sentence_embeddings\n",
-    "#         i +=1\n",
-    "# np.save('embeddings_test.npy', embeddings_test)"
+    "embeddings_test = np.zeros((len(test_dataset), embedding_size))\n",
+    "i = 0\n",
+    "with torch.no_grad():\n",
+    "    model.eval()\n",
+    "    for batch in tqdm(test_loader, total=len(test_loader)):\n",
+    "        data = list(batch.values())\n",
+    "        encoded = tokenizer(*data, return_tensors='pt', padding=True, truncation=False)\n",
+    "        del data\n",
+    "        encoded.to(DEVICE)\n",
+    "        outputs = model(**encoded)\n",
+    "        word_embeddings = outputs.last_hidden_state * encoded.attention_mask.unsqueeze(-1).float()\n",
+    "        del outputs\n",
+    "        sentence_embeddings = word_embeddings.sum(dim=1)\n",
+    "        del word_embeddings\n",
+    "        sentence_embeddings /= encoded.attention_mask.sum(dim=1, keepdim=True).float()\n",
+    "        del encoded\n",
+    "        embeddings_test[BATCH_SIZE*i : BATCH_SIZE*(i+1)] = sentence_embeddings.cpu().numpy()\n",
+    "        del sentence_embeddings\n",
+    "        i +=1\n",
+    "np.save('embeddings_test.npy', embeddings_test)"
    ]
   },
   {
@@ -290,31 +266,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# embeddings_train = np.zeros((len(train_dataset), embedding_size))\n",
-    "# i = 0\n",
-    "# with torch.no_grad():\n",
-    "#     model.eval()\n",
-    "#     for batch in tqdm(train_loader, total=len(train_loader)):\n",
-    "#         data = list(batch.values())\n",
-    "#         encoded = tokenizer(*data, return_tensors='pt', padding=True, truncation=True)\n",
-    "#         del data\n",
-    "#         encoded.to(DEVICE)\n",
-    "#         outputs = model(**encoded)\n",
-    "#         word_embeddings = outputs.last_hidden_state * encoded.attention_mask.unsqueeze(-1).float()\n",
-    "#         del outputs\n",
-    "#         sentence_embeddings = word_embeddings.sum(dim=1)\n",
-    "#         del word_embeddings\n",
-    "#         sentence_embeddings /= encoded.attention_mask.sum(dim=1, keepdim=True).float()\n",
-    "#         del encoded\n",
-    "#         embeddings_train[BATCH_SIZE*i : BATCH_SIZE*(i+1)] = sentence_embeddings.cpu().numpy()\n",
-    "#         del sentence_embeddings\n",
-    "#         i +=1\n",
-    "# np.save('embeddings_train.npy', embeddings_train)"
+    "embeddings_train = np.zeros((len(train_dataset), embedding_size))\n",
+    "i = 0\n",
+    "with torch.no_grad():\n",
+    "    model.eval()\n",
+    "    for batch in tqdm(train_loader, total=len(train_loader)):\n",
+    "        data = list(batch.values())\n",
+    "        encoded = tokenizer(*data, return_tensors='pt', padding=True, truncation=False)\n",
+    "        del data\n",
+    "        encoded.to(DEVICE)\n",
+    "        outputs = model(**encoded)\n",
+    "        word_embeddings = outputs.last_hidden_state * encoded.attention_mask.unsqueeze(-1).float()\n",
+    "        del outputs\n",
+    "        sentence_embeddings = word_embeddings.sum(dim=1)\n",
+    "        del word_embeddings\n",
+    "        sentence_embeddings /= encoded.attention_mask.sum(dim=1, keepdim=True).float()\n",
+    "        del encoded\n",
+    "        embeddings_train[BATCH_SIZE*i : BATCH_SIZE*(i+1)] = sentence_embeddings.cpu().numpy()\n",
+    "        del sentence_embeddings\n",
+    "        i +=1\n",
+    "np.save('embeddings_train.npy', embeddings_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "84c83c38",
    "metadata": {},
    "outputs": [],
@@ -330,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cf22a570",
    "metadata": {},
    "outputs": [],
@@ -349,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "843f38b9dbea00b0",
    "metadata": {
     "collapsed": false
@@ -357,8 +333,8 @@
    "outputs": [],
    "source": [
     "# TODO: Fill out MyModule\n",
-    "layer1_size = 200\n",
-    "layer2_size = 200\n",
+    "layer1_size = 500\n",
+    "layer2_size = 500\n",
     "dropout_prop = 0\n",
     "\n",
     "class Net(nn.Module):\n",
@@ -370,10 +346,12 @@
     "        The constructor of the model.\n",
     "        \"\"\"\n",
     "        super().__init__()\n",
-    "        self.fc1 = nn.Linear(2*embedding_size, layer1_size)\n",
+    "        self.fc1 = nn.Linear(embedding_size, layer1_size)\n",
     "        self.dropout1 = nn.Dropout(dropout_prop)\n",
     "        self.fc2 = nn.Linear(layer1_size, layer2_size)\n",
     "        self.dropout2 = nn.Dropout(dropout_prop)\n",
+    "        # self.fc3 = nn.Linear(layer2_size, layer3_size)\n",
+    "        # self.dropout3 = nn.Dropout(dropout_prop)\n",
     "        self.fc3 = nn.Linear(layer2_size, 1)\n",
     "\n",
     "    def forward(self, x):\n",
@@ -388,6 +366,9 @@
     "        x = self.fc2(x)\n",
     "        x = F.elu(x)\n",
     "        x = self.dropout2(x)\n",
+    "        # x = self.fc3(x)\n",
+    "        # x = F.elu(x)\n",
+    "        # x = self.dropout3(x)\n",
     "        x = self.fc3(x)\n",
     "        return x"
    ]
@@ -406,7 +387,7 @@
     "model.to(DEVICE)\n",
     "\n",
     "n_epochs = NUM_EPOCHS\n",
-    "patience = 10\n",
+    "patience = 100\n",
     "min_delta = 0.001\n",
     "best_val_loss = float('inf')\n",
     "epochs_no_improve = 0\n",
@@ -486,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "657cfdec",
    "metadata": {},
    "outputs": [],
@@ -501,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "60e56bba5fa2d905",
    "metadata": {
     "collapsed": false
